# cmake_boost_hello_world

./: README.md
src/: CMakeLists.txt  main.cc
